add_executable(test-core-discovery test-discovery.cpp)
target_link_libraries(test-core-discovery ${UMUNDOCORE_LIBRARIES})
add_test(test-core-discovery ${CMAKE_RUNTIME_OUTPUT_DIRECTORY}/test-core-discovery)
set_target_properties(test-core-discovery PROPERTIES FOLDER "Tests")
add_dependencies(ALL_TESTS test-core-discovery)

add_executable(test-core-domains test-domains.cpp)
target_link_libraries(test-core-domains ${UMUNDOCORE_LIBRARIES})
add_test(test-core-domains ${CMAKE_RUNTIME_OUTPUT_DIRECTORY}/test-core-domains)
set_target_properties(test-core-domains PROPERTIES FOLDER "Tests")
add_dependencies(ALL_TESTS test-core-domains)

add_executable(test-core-threads test-threads.cpp)
target_link_libraries(test-core-threads ${UMUNDOCORE_LIBRARIES})
set_target_properties(test-core-threads PROPERTIES FOLDER "Tests")
add_test(test-core-threads ${CMAKE_RUNTIME_OUTPUT_DIRECTORY}/test-core-threads)
add_dependencies(ALL_TESTS test-core-threads)

add_executable(test-core-message-transmission test-message-transmission.cpp)
target_link_libraries(test-core-message-transmission ${UMUNDOCORE_LIBRARIES})
target_link_libraries(test-core-message-transmission ${UMUNDOUTIL_LIBRARIES})
add_test(test-core-message-transmission ${CMAKE_RUNTIME_OUTPUT_DIRECTORY}/test-core-message-transmission)
set_target_properties(test-core-message-transmission PROPERTIES FOLDER "Tests")
add_dependencies(ALL_TESTS test-core-message-transmission)

add_executable(test-core-stress test-stress.cpp)
target_link_libraries(test-core-stress ${UMUNDOCORE_LIBRARIES})
#add_test(test-core-stress ${CMAKE_RUNTIME_OUTPUT_DIRECTORY}/test-core-stress)
set_target_properties(test-core-stress PROPERTIES FOLDER "Tests")
add_dependencies(ALL_TESTS test-core-stress)
